prevent scrolling on iOS subgenre modal with body scroll lock

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -62,7 +62,6 @@ body {
   // font-family: 'Object-Sans-Bold',sans-serif;
   // font-family: 'Object-Sans-Heavy',sans-serif;
   // font-family: 'Object-Sans-Black',sans-serif;
-      position: relative;
 }
 
 a {
